# lightingStudy

./: CMakeLists.txt  README.md  compile_commands.json  main  main.cpp
.cache/clangd/index/: EBO.cpp.3385CBF6AE66207E.idx  EBO.h.E567EAAF58DCC4D6.idx  FBO.cpp.F314AE8369C33E61.idx  FBO.h.55A8DBF91D56E3A2.idx  VAO.cpp.C1D16E51B252C44F.idx  VAO.h.389E73FC0BA890D1.idx  VBO.cpp.9203025F32C2F525.idx  VBO.h.81521EF157291656.idx  _fixes.hpp.71652A77A6B6D1DF.idx  _vectorize.hpp.D94FDABCF26CB3B2.idx  camera.cpp.7A76016890E5CC31.idx  camera.h.FF2C8686F79766BF.idx  common.hpp.EB4335BDFFECB1BA.idx  component_wise.hpp.2D1B0A9230D4FBEF.idx  component_wise.inl.95C0407983A5B67C.idx  compute_common.hpp.E6547F7E580534F4.idx  compute_vector_decl.hpp.B7BAB4A33B9577A8.idx  compute_vector_relational.hpp.C78C4A52140DEEB3.idx  constants.hpp.92683264473155C4.idx  constants.inl.71764ED13C4F03C1.idx  epsilon.hpp.6216918CF7772C73.idx  epsilon.inl.DEA73A1C261AC2C8.idx  exponential.hpp.84F27B349A84769B.idx  func_common.inl.01222CAA2A9EC738.idx  func_exponential.inl.EE92E925B4E17477.idx  func_geometric.inl.939C544703AE70DF.idx  func_integer.inl.C2195C36372D4279.idx  (+216 more)
assets/ModularModel/: modular.mtl
assets/bloom/: gBlur.frag
assets/shaders/: default.frag  default.vert  framebuffer.frag  framebuffer.vert  hdr.frag  lightCube.frag  skybox.vert
headers/: FBO.h  VAO.h  VBO.h  camera.h  guiVariables.h  mesh.h  model.h  shaderClass.h  texture.h
include/KHR/: khrplatform.h
src/: FBO.cpp  VAO.cpp  VBO.cpp  camera.cpp  glad.h  main.cpp  mesh.cpp  model.cpp  shaderClass.cpp  texture.cpp
(+3 files in other folders)
